GearsetPOC/force-app/main/default/objects/Comfort_Class_and_Tariff__c/Comfort_Class_and_Tariff__c.object-meta.xml
<CustomObject>
    <description>To support the common corporate offer’s Comfort Class, Discounts and Tariff Codes for Negotiated Rates generation</description>
    <label>Comfort Class and Tariff</label>
    <nameField>
        <label>Comfort Class and Tariff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comfort Class and Tariffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>