GearsetPOC/force-app/main/default/objects/Comfort_Class_and_Tariff__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eurostar Standard</fullName>
            </value>
            <value>
                <fullName>Eurostar Plus</fullName>
            </value>
            <value>
                <fullName>Eurostar Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>