GearsetPOC/force-app/main/default/objects/Comfort_Class_and_Tariff__c/fields/IDL_and_BeNe_or_GDS_Air__c.field-meta.xml
<CustomField>
    <fullName>IDL_and_BeNe_or_GDS_Air__c</fullName>
    <label>IDL and BeNe or GDS Air</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDL and BeNe</fullName>
            </value>
            <value>
                <fullName>GDS Air</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>