GearsetPOC/force-app/main/default/objects/Comfort_Class_and_Tariff__c/fields/Percentage_Discount__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Discount__c</fullName>
    <label>Percentage Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>2%</fullName>
            </value>
            <value>
                <fullName>3%</fullName>
            </value>
            <value>
                <fullName>3.5%</fullName>
            </value>
            <value>
                <fullName>4%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>6%</fullName>
            </value>
            <value>
                <fullName>7%</fullName>
            </value>
            <value>
                <fullName>8%</fullName>
            </value>
            <value>
                <fullName>9%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>11%</fullName>
            </value>
            <value>
                <fullName>12%</fullName>
            </value>
            <value>
                <fullName>13%</fullName>
            </value>
            <value>
                <fullName>14%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>16%</fullName>
            </value>
            <value>
                <fullName>17%</fullName>
            </value>
            <value>
                <fullName>18%</fullName>
            </value>
            <value>
                <fullName>19%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>21%</fullName>
            </value>
            <value>
                <fullName>22%</fullName>
            </value>
            <value>
                <fullName>23%</fullName>
            </value>
            <value>
                <fullName>24%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>