GearsetPOC/force-app/main/default/objects/Comfort_Class_and_Tariff__c/fields/Route_Code__c.field-meta.xml
<CustomField>
    <fullName>Route_Code__c</fullName>
    <label>Route Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FRBE</fullName>
            </value>
            <value>
                <fullName>FRDE</fullName>
            </value>
            <value>
                <fullName>FRNL</fullName>
            </value>
            <value>
                <fullName>BEDE</fullName>
            </value>
            <value>
                <fullName>BENL</fullName>
            </value>
            <value>
                <fullName>DBNL</fullName>
            </value>
            <value>
                <fullName>UKBE</fullName>
            </value>
            <value>
                <fullName>UKFR</fullName>
            </value>
            <value>
                <fullName>UKNL</fullName>
            </value>
            <value>
                <fullName>Deutscher Bund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>