GearsetPOC/force-app/main/default/objects/Comfort_Class_and_Tariff__c/fields/Routes__c.field-meta.xml
<CustomField>
    <fullName>Routes__c</fullName>
    <label>Routes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France - Belgium</fullName>
            </value>
            <value>
                <fullName>France - Germany</fullName>
            </value>
            <value>
                <fullName>France - The Netherlands</fullName>
            </value>
            <value>
                <fullName>Belgium - Germany</fullName>
            </value>
            <value>
                <fullName>Belgium - The Netherlands</fullName>
            </value>
            <value>
                <fullName>London - Belgium</fullName>
            </value>
            <value>
                <fullName>London - France</fullName>
            </value>
            <value>
                <fullName>London - The Netherlands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>