GearsetPOC/force-app/main/default/objects/Comfort_Class_and_Tariff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>IDL_and_BeNe_or_GDS_Air__c</columns>
    <columns>Percentage_Discount__c</columns>
    <columns>Route_Code__c</columns>
    <columns>Routes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>